Fix layout shift when button hover on Safari

--- a/packages/bulletin/assets/css/screen.css
+++ b/packages/bulletin/assets/css/screen.css
@@ -187,6 +187,7 @@
     box-shadow: 0 27px 80px rgba(0, 0, 0, 0.07), 0 11.28px 33.4221px rgba(0, 0, 0, 0.0503198), 0 6.0308px 17.869px rgba(0, 0, 0, 0.0417275), 0 3.38082px 10.0172px rgba(0, 0, 0, 0.035), 0 1.79553px 5.32008px rgba(0, 0, 0, 0.0282725), 0 0.747159px 2.21381px rgba(0, 0, 0, 0.0196802);
     transition: transform 0.3s cubic-bezier(0.25, 0.75, 0.5, 1.25);
     transform: scale(1.25);
+    will-change: transform;
 }
 
 .gh-home-latest-footer .gh-btn:hover {
